--- a/codex_ps_2024_1/pubspec.yaml
+++ b/codex_ps_2024_1/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
+  shared_preferences: ^2.3.2
+  intl: ^0.19.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
